@@ -6,6 +6,7 @@ bin/npg_daemon_control
 bin/npg_move_runfolder
 bin/npg_samplesheet4MiSeq
 bin/npg_samplesheet4NovaSeqX
+bin/npg_samplesheet4ultimagen
 bin/npg_samplesheet_generator_NovaSeqXSeries
 bin/npg_status_save
 bin/staging_area_monitor
@@ -720,6 +721,7 @@ t/data/samplesheet/miseq_extended.csv
 t/data/samplesheet/multilane.csv
 t/data/samplesheet/novaseq_multirun.csv
 t/data/samplesheet/samplesheet_47539.csv
+t/data/samplesheet/ultimagen_51815.csv
 t/data/samplesheet/dragen/231206_47995_NVX1_A_ssbatch98292.csv
 t/data/samplesheet/dragen/231206_47995_NVX1_A_ssbatch98292_align.csv
 t/data/samplesheet/dragen/231206_47995_NVX1_A_ssbatch98292_varcall.csv
