@@ -1,0 +1,9 @@
+[Data],,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+Lane,Sample_ID,Sample_Name,GenomeFolder,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,gbs_plex_name,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,purpose,qc_state,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_control_type,sample_description,sample_donor_id,sample_id,sample_is_control,sample_lims,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,sample_uuid,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,
+1,SQPP-94282-Q%3AA1,EGAN00002490989,,,Ultima High Throughput PCR Free 96,CAGTCAGTTGCAGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AA1,,9606,,,,,EGAN00002490989,Normal,Homo sapiens,0,,,PD41305k_168,4396716,,SQSCP,6133STDY8786697,PD41305k_168,,PD41305k_168,988e0b20-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,97,
+1,SQPP-94282-Q%3AB1,EGAN00002490992,,,Ultima High Throughput PCR Free 96,CAACAGATGTATGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AB1,,9606,,,,,EGAN00002490992,Normal,Homo sapiens,0,,,PD41305k_171,4396719,,SQSCP,6133STDY8786700,PD41305k_171,,PD41305k_171,98b1c754-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,98,
+1,SQPP-94282-Q%3AC1,EGAN00002490993,,,Ultima High Throughput PCR Free 96,CTCATCTGCGCAATGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AC1,,9606,,,,,EGAN00002490993,Normal,Homo sapiens,0,,,PD41305k_172,4396720,,SQSCP,6133STDY8786701,PD41305k_172,,PD41305k_172,98bc1fd8-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,99,
+1,SQPP-94282-Q%3AD1,EGAN00002491001,,,Ultima High Throughput PCR Free 96,CGGATCATGCGTGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AD1,,9606,,,,,EGAN00002491001,Normal,Homo sapiens,0,,,PD41305k_180,4396728,,SQSCP,6133STDY8786709,PD41305k_180,,PD41305k_180,98fa9880-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,100,
+1,SQPP-94282-Q%3AE1,EGAN00002491002,,,Ultima High Throughput PCR Free 96,CTATTGCATGCTCTGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AE1,,9606,,,,,EGAN00002491002,Normal,Homo sapiens,0,,,PD41305k_181,4396729,,SQSCP,6133STDY8786710,PD41305k_181,,PD41305k_181,9901eebe-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,101,
+1,SQPP-94282-Q%3AF1,EGAN00002491003,,,Ultima High Throughput PCR Free 96,CTACCTGATGCAGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AF1,,9606,,,,,EGAN00002491003,Normal,Homo sapiens,0,,,PD41305k_182,4396730,,SQSCP,6133STDY8786711,PD41305k_182,,PD41305k_182,990a226e-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,102,
+1,SQPP-94282-Q%3AG1,EGAN00002491009,,,Ultima High Throughput PCR Free 96,CATATAATCACAGAT,,,,,,,0,0,76975170,,SQPP-94282-Q%3AG1,,9606,,,,,EGAN00002491009,Normal,Homo sapiens,0,,,PD41305k_185,4396733,,SQSCP,6133STDY8786714,PD41305k_185,,PD41305k_185,99276e32-58b9-11ea-9228-fa163e9d6485,9999,EGAS00001000290,1,0,0,Wholegenome libraries will be prepared.,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),0,Myeloproliferative Disease Whole Genomes,103,
